knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/User/User.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>