knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/User/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>This formula is being used in email template</description>
    <formula>IF(
    OR(
        ISPICKVAL(Contact.Professional_Title__c, &quot;MD&quot;),
        ISPICKVAL(Contact.Professional_Title__c, &quot;DO&quot;)
    ),
    &quot;Dr. &quot; &amp; Contact.LastName,
    Contact.FirstName
)</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>