knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/User/fields/Feedback_Request_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Request_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Request Allowed</label>
    <type>Checkbox</type>
</CustomField>