knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/User/fields/Has_Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Has_Federation_ID__c</fullName>
    <formula>NOT( ISBLANK(FederationIdentifier) )</formula>
    <label>Has Federation ID</label>
    <type>Checkbox</type>
</CustomField>