knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/User/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Salesforce persona populated by Okta provisioning based on assigned Okta persona group.</description>
    <inlineHelpText>Persona assigned through Okta. Read-only for visibility and reporting.</inlineHelpText>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>